<resources>
    <string name="app_name">Fisaa</string>
    <string name="splash_intro">Transport de colis\nentre particuliers</string>
    <string name="signUpIntro">Inscription</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="label_auth">CONNEXION</string>
    <string name="social_auth">OU SE CONNECTER AVEC </string>
    <string name="signup_action"><u>Créer un compte</u></string>
    <string name="home_bom">ACCUEIL</string>
    <string name="ads_bom">ANNONCES</string>
    <string name="trans_bom">TRANSACTIONS</string>
    <string name="profile_bom">PROFIL</string>

    <!-- Hints -->
    <string name="hintfname">Nom</string>
    <string name="hintlname">Prénom</string>
    <string name="hintBDay">Date de naissance</string>
    <string name="hintCIN">CIN</string>
    <string name="hintPhone">N° de téléphone</string>
    <string name="hintAdr">Adresse</string>
    <string name="hintZip">Code Postal</string>
    <string name="hintCity">Ville</string>
    <string name="hintCountry">Pays</string>
    <string name="hintDescription">Description</string>

    <!-- Drawer -->
    <string name="txtDashboard">TABLEAU DE BORD</string>
    <string name="txtNextFlights">PROCHAINS DEPARTS</string>

    <!-- Home Fragment -->
    <string name="txtHomeHeadline1">Je cherche un trajet</string>
    <string name="txtHomeHeadline2">Les prochains départs</string>
    <string name="btnAutocomplete">C’est Parti !</string>
    <string name="allFlights"><u>Tous les départs</u></string>
    <string name="PopularFlights">Top des trajets</string>
    <string name="allFLights1"><u>Top des trajets</u></string>
    <string name="hintDeparture">Départ</string>
    <string name="hintDestination">Destination</string>


    <!-- Ads Fragment -->
    <string name="adstitle">ANNONCES</string>
    <string name="purchase">Achat</string>
    <string name="travel">Voyage</string>
    <string name="transport">Transport</string>


    <!-- Flights Fragment -->
    <string name="flightsTitle">LES PROCHAINS DEPARTS</string>
    <string name="chat">Contacter</string>

    <!-- Adapter Flights -->
    <string name="fullname">%s %s</string>
    <!-- Adapter chat currency-->
    <string name="currency"> %d€</string>
    <!-- Camera -->
    <string name="rqCameraPerms">Veuillez autoriser les permissions</string>


    <string name="facebook_app_id">1135022460280967</string>
    <string name="fb_login_protocol_scheme">fb1135022460280967</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Content description -->
    <string name="imFab">Add New Ad</string>
    <string name="date">Date</string>
    <string name="CreateAd">Créer une annonce</string>
    <string name="colis">Je veux envoyer un colis</string>
    <string name="travelad">Je veux annoncer mon voyage</string>
    <string name="Purchase">Je veux acheter et recevoir un produit</string>
    <string name="dates">Dates</string>
    <string name="no_date">Pas de date particulière</string>
    <string name="tx_deconnexion">déconnexion</string>
    <string name="small_arrow">small_arrow</string>
    <string name="lbl1">2 étoiles</string>
    <string name="lbl2">3 étoiles</string>
    <string name="lbl3">5 étoiles</string>
    <string name="lbl4">Non noté</string>
    <string name="lbl5">4 étoiles</string>
    <string name="lbl6">4 et 5 étoiles</string>
    <string name="send">Envoyer</string>
    <string name="transaction_header">Transaction avec:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mon_profil">mon profil</string>
    <string name="desc">Salut ! Je m’appelle Arun, je suis une personne sérieuse, je prendrais grand soin de vos colis :)</string>


</resources>